Fixed issue with strange spacing in the gallery.

--- a/themes/openpublish-themes/frame/css/default.css
+++ b/themes/openpublish-themes/frame/css/default.css
@@ -469,7 +469,7 @@ input[type="submit"]:hover {
   width: 32%;
   margin-right: 2%;
 }
-.node-openpublish-photo-gallery .field-name-field-op-gallery-image > .field-items > .field-item:nth-child(3n+3) {
+.node-openpublish-photo-gallery .field-name-field-op-gallery-image > .field-items > .field-item:nth-of-type(3n+3) {
   margin-right: 0;
 }
 
